# shorten-rs

./: Cargo.toml
src/: main.rs  shortener.rs
templates/layout/: home_layout.html
templates/pages/: error.html  generated.html  home.html
