[package]
name = "shorten-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
nanoid = "0.4.0"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
url = "2.4.1"
